Grade levels, Support.union, Support.addNode, PropositionNode.addJustification